# matrix-sidecar-search

./: .env.example  .gitignore  Dockerfile  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: ci.yml  container.yml
docs/: architecture.md  operations.md
src/matrix_sidecar_search/: __init__.py  api.py  async_adapters.py  cli.py  config.py  database.py  indexer.py  meili.py  permissions.py  redactions.py  runner.py  search_pipeline.py
tests/: test_api.py  test_async_adapters.py  test_config.py  test_database_indexer.py  test_indexer.py  test_meili_documents.py  test_permissions.py  test_redactions.py  test_runner.py  test_search_pipeline.py
